// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2EDataAttribute snapshots should render E2EDataAttribute 1`] = `
<DocumentFragment>
  <span
    data-test-test-1=""
  >
    child
  </span>
</DocumentFragment>
`;

exports[`E2EDataAttribute snapshots should render with multiple types and values 1`] = `
<DocumentFragment>
  <span
    data-test-test-1="test-1"
    data-test-test-2="test-2"
  >
    child
  </span>
</DocumentFragment>
`;

exports[`E2EDataAttribute snapshots should render with value 1`] = `
<DocumentFragment>
  <span
    data-test-test-1="test-1"
  >
    child
  </span>
</DocumentFragment>
`;

exports[`E2EDataAttribute snapshots should render without attribute id 1`] = `
<DocumentFragment>
  <span>
    child
  </span>
</DocumentFragment>
`;
